--- a/src/Admin/assets/polyglot.css
+++ b/src/Admin/assets/polyglot.css
@@ -19,29 +19,23 @@
     zoom: 1; /* For IE 6/7 (trigger hasLayout) */
 }
 
-.alert-info {
-  color: #31708f;
-  background-color: #d9edf7;
-  border-color: #bce8f1;
+
+.wp-core-ui .dynamic-translations .on:active,
+.wp-core-ui .dynamic-translations .on:hover,
+.wp-core-ui .dynamic-translations .on:focus,
+.dynamic-translations .on  {
+    background: #00a0d2;
+    border-color: #0073aa;
+    -webkit-box-shadow: inset 0 1px 0 rgba( 120, 200, 230, 0.5), 0 1px 0 rgba( 0, 0, 0, 0.15 );
+    box-shadow: inset 0 1px 0 rgba( 120, 200, 230, 0.5 ), 0 1px 0 rgba( 0, 0, 0, 0.15 );
+    color: #fff;
+    text-decoration: none;
+    display:inline-block;
 }
 
-.alert {
-  padding: 15px;
-  margin-bottom: 20px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-}
 
-.existing-locales {
-    min-height: 400px;
-    border-bottom: 1px solid #dedede;
-}
-
-.summary .col {
-    height: 280px;
-}
-
-.summary .overflow {
-    height: 260px;
-    overflow: auto;
+.box {
+    display: inline-block;
+    margin:1em;
+    padding: 1em;
 }
