--- a/src/Admin/assets/polyglot.css
+++ b/src/Admin/assets/polyglot.css
@@ -1,29 +1,21 @@
-.col {
+.polyglot-page .col {
     float:left;
     width:50%;
 }
-.col3 {
-    float:left;
-    width:32%;
-}
 
-.group:before,
-.group:after {
+.polyglot-page .group:before,
+.polyglot-page .group:after {
     content: "";
     display: table;
 }
-.group:after {
+.polyglot-page .group:after {
     clear: both;
 }
-.group {
+.polyglot-page .group {
     zoom: 1; /* For IE 6/7 (trigger hasLayout) */
 }
 
-
-.wp-core-ui .dynamic-translations .on:active,
-.wp-core-ui .dynamic-translations .on:hover,
-.wp-core-ui .dynamic-translations .on:focus,
-.dynamic-translations .on  {
+.polyglot-page .dynamic-translations .on  {
     background: #00a0d2;
     border-color: #0073aa;
     -webkit-box-shadow: inset 0 1px 0 rgba( 120, 200, 230, 0.5), 0 1px 0 rgba( 0, 0, 0, 0.15 );
@@ -34,8 +26,35 @@
 }
 
 
-.box {
+.polyglot-page .box {
     display: inline-block;
     margin:1em;
     padding: 1em;
+}
+
+.polyglot-page header {
+    height:140px;
+}
+
+.polyglot-page .title {
+    float: left;
+    margin-top:1em;
+}
+
+.polyglot-page .scanner {
+    float: right;
+    margin:2em;
+    padding:1em;
+    width:20%;
+    text-align:center;
+}
+
+.polyglot-page .scanner p {
+    color:#999;
+    background:#fff;
+    padding:1em;
+}
+
+.polyglot-page .scanner .button {
+    width:100%;
 }
